[tool.poetry]
name = "keyboard-game"
version = "0.1.0"
description = ""
authors = ["sairam4123 <kannanscoffee@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
keyboard = "^0.13.5"
pywin32 = "^306"
fuzzywuzzy = {extras = ["all"], version = "^0.18.0"}
pydub = "^0.25.1"
requests = "^2.31.0"
pynput = "^1.7.6"
gTTS = "^2.5.1"
python-Levenshtein = "^0.25.1"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
